assets/scss/supporting/nav.scss
/* Navbar
----------------------------------------------------------------------------- */

.nav-icons-images {
	.nav-icons-images-wrap {
		float: right;
		img {
			transition: 0.5s;
			width: 150px;
		}
	}
}
.break {
	flex-basis: 100%;
	height: 0;
	width: 0;
}
.scrolled {
	.wrap {
		#nav-primary {
			.navbar-nav {
				.break {
					transition: 0.5s;
					flex-basis: initial;
					height: auto;
					width: auto;
					img {
						width: 50px;
						transition: 0.5s;
					}
				}
			}
		}
	}
}
.bg-dark {
  background-color: #1C1D24;
}
#genesis-nav-primary{
  .wrap.container-fluid {
	max-width: 2000px;
  }
}
.navbar-clear.bg-clear {
  background-color: transparent;
  transition: 1s;
  .wrap {
	a img {
	  width: 150px;
	  height: auto;
	  transition: 1s;
	}
  }
}
.post-template-default.single {
  .site-container {
	.site-header {
	  .nav-primary {
		.wrap {
		  #nav-primary {
			ul li a {
			  color: $black;
			}
		  }
		}
	  }
	  .bg-clear.scrolled {
		.wrap {
		  .navbar-brand {
			background-color: $white;
			border-radius: 10%;
			img {
			  width: 40px;
			  transition: 1s;
			}
		  }
		  #nav-primary {
			ul li a {
			  color: $white;
			  transition: 1s;
			}
		  }
		}
	  }
	}
  }
}
.blog {
  .site-container {
	.site-header {
	  .nav-primary {
		.wrap {
		  #nav-primary {
			ul li a {
			  color: $black;
			}
		  }
		}
	  }
	  .bg-clear.scrolled {
		.wrap {
		  .navbar-brand {
			background-color: $white;
			border-radius: 10%;
			img {
			  width: 40px;
			  transition: 1s;
			}
		  }
		  #nav-primary {
			ul li a {
			  color: $white;
			  transition: 1s;
			}
		  }
		}
	  }
	}
  }
}

.page-template-default {
  .navbar-clear .navbar-nav .nav-link {
	color: $black;
  }
  .bg-clear.scrolled {
	.wrap {
	  .navbar-brand {
		background-color: $white;
		border-radius: 10%;
		img {
		  width: 40px;
		  transition: 1s;
		}
	  }
	  #nav-primary {
		ul li a {
		  color: $white;
		  transition: 1s;
		}
	  }
	}
  }
}

.no-js .menu-item-has-children:hover .dropdown-menu,
.no-js .menu-item-has-children:focus .dropdown-menu {
    display: block;
}
.dropdown-menu {
  li a {
	color: $black !important;
  }
}

.dropdown-item.active, .dropdown-item:active {
  background-color: red;
}

.dropdown-item:focus, .dropdown-item:hover {
  background-color: red;
}

/* Move navigation below wp-admin bar */
.logged-in {
    .navbar-fixed-top {
        margin-top: 32px; // Move navigation below wp-admin bar
    }
}

.navbar {
  margin: 0 auto;
    padding: {
        left: 2.618em;
        right: 2.618em;
    }
}

.navbar-clear .navbar-nav .nav-link {
  color: hsla(360, 100%, 100%, 1);
}

.bg-clear.scrolled {
  background-color: $black !important;
  transition: 1s;
  .wrap {
	button {
	  .navbar-toggler-icon {
		.fa-bars {
		  color: $white;
		}
	  }
	}
  }
}

.navbar-toggler-icon {
  height: 1.7em;
}

.navbar-toggler {
  border: none;
  outline: none;
}

.navbar-collapse.collapse.show {
  background-color: $black;
  padding: $em1;
}
.navbar-nav.sm-collapsible .sub-arrow {
  right: auto;
  left: 200px;
}
.navbar-nav.ml-auto.sm-collapsible {
  width: 55%;
  margin: 0 auto;
}

.front-page {
  .navbar-clear .navbar-nav .nav-link {
	color: $white;
  }
}
.navbar-nav {
	flex-wrap: wrap;
}

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {}

// Extra small devices (portrait phones, less than 576px)
@media (max-width: 575.98px) {}

// Small devices (landscape phones, less than 768px)
@media (max-width: 767.98px) {

	.nav-icons-images {
		.nav-icons-images-wrap {
			float: none;
			img {
				transition: 0.5s;
				width: 80px;
			}
		}
	}
	.break {
		flex-basis: initial;
		height: auto;
		width: auto;
	}
	.scrolled {
		.wrap {
			#nav-primary {
				.navbar-nav {
					.break {
						transition: 0.5s;
						flex-basis: initial;
						height: auto;
						width: auto;
						img {
							width: 80px;
							transition: 0.5s;
						}
					}
				}
			}
		}
	}

  .page-template-default .navbar-clear .navbar-nav .nav-link {
	color: $white;
  }
  .navbar-clear.bg-clear {
	background-color: transparent;
	transition: 1s;
	.wrap {
	  a img {
		width: 80px;
		height: auto;
		transition: 1s;
	  }
	}
  }
}

// Medium devices (tablets, less than 992px)
@media (max-width: 991.98px) {

}

// Large devices (desktops, less than 1200px)
@media (max-width: 1199.98px) {}

